# coderisktools-scanner

./: .coderisktools-baseline.json  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
docs/: ADR-0001-vulnerability-secret-contract-separation.md  DETECTION_INVENTORY.md  EXTERNAL-EVIDENCE-COMPARISON.md  FULL-FEED-COVERAGE-PLAN.md  GLOBAL-OSV-SNAPSHOT.md  GOLDEN_PARITY.md  KNOWN-LIMITATIONS.md  MASTER-TODO-GAPS-AUDIT.md  P0-CONSOLIDATION-AUDIT-V0-V11.md  P1-DOMAIN-MODELS-HEALTH.md  P1-VERSION-COMPARATORS.md  P2-SNAPSHOT-SCHEMA-FOUNDATIONS.md  PERFORMANCE_BASELINE.md  PRODUCT_BOUNDARY.md  REJECTED_SECRET_FORMATS.md  RELEASE-NOTES-3.0.1.md  RELEASE-NOTES-3.1.0.md  SELF_SCAN_BASELINE.md  STAGE6_SECRET_DETECTOR_BACKLOG.md  STAGE7_FOUNDATION_CONTRACTS.md  STAGE8_CI_CD_BATCH1_SOURCES.md  V0-CONTRACT-INVENTORY.md  V1-VULNERABILITY-DOMAIN-CONTRACT.md  V10-BASELINE-DELTA.md  V10-VEX-SUPPRESSION.md  V11A-CYCLONEDX-SBOM.md  V11B-SPDX-SBOM.md  V11C-SYFT-SBOM.md  V17-CONTROLLED-UPDATE-PIPELINE.md  V2A-PYTHON-NODE-INVENTORY.md  V2B-CARGO-GO-COMPOSER-INVENTORY.md  V2C-POETRY-UV-INVENTORY.md  V3A-MINI-OSV-SQLITE.md  V3B-OSV-IMPORT-QUALITY.md  V3C-SNAPSHOT-ACTIVATION.md  V4A-VULNERABILITY-PIPELINE.md  V4B-VULNERABILITY-BASELINE-SARIF.md  V4C-VULNERABILITY-POLICY.md  V5A-CONTROLLED-OSV-INGESTION.md  V5B-OSV-SIGNATURE-VERIFICATION.md  (+54 more)
examples/: clean.diff
integrations/: AI_AGENT_HOOKS.md
packs/: core-detections-v2.json  provisional-secret-candidates-v2.json
scripts/: build_global_osv_vulndb.py  (+7 more)
(+367 files in other folders)
