[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coderisktools-scanner"
version = "3.1.0"
description = "Local-first open-source scanner for secret-like values and risky configuration changes in code diffs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "CodeRiskTools"}]
keywords = ["secret-scanning", "ai-code", "pre-commit", "github-action", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://coderisktools.store/"
Repository = "https://github.com/9batalion/coderisktools-scanner"
Issues = "https://github.com/9batalion/coderisktools-scanner/issues"

[project.scripts]
secret-scanner = "src.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
